--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 networks:
-  srv:
+  ${TNETWORK}:
      external: true
 
 services:
@@ -22,7 +22,7 @@ services:
       - "traefik.enable=true"
       - "traefik.port=80"
     networks:
-      - millerdev_srv
+      - ${TNETWORK}
 
 
 
@@ -34,5 +34,5 @@ services:
     depends_on:
       - wp
     networks:
-      - srv
+      - ${TNETWORK}
 
