--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 services:
   wp:
     image: wordpress:latest # https://hub.docker.com/_/wordpress/
+    container_name: wordpress_${SUBDOMAIN}
     volumes:
       - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
       - ./wp-app:/var/www/html # Full wordpress project
