--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 
 networks:
-  ${TNETWORK}:
+  "${TNETWORK}":
      external: true
 
 services:
   wp:
     image: wordpress:latest # https://hub.docker.com/_/wordpress/
-    container_name: wordpress_${SUBDOMAIN}
+    container_name: wordpress_"${SUBDOMAIN}"
     volumes:
       - ./config/php.conf.ini:/usr/local/etc/php/conf.d/conf.ini
       - ./wp-app:/var/www/html # Full wordpress project
@@ -23,7 +23,7 @@ services:
       - "traefik.enable=true"
       - "traefik.port=80"
     networks:
-      - ${TNETWORK}
+      - "${TNETWORK}"
 
 
 
@@ -35,5 +35,5 @@ services:
     depends_on:
       - wp
     networks:
-      - ${TNETWORK}
+      - "${TNETWORK}"
 
